<resources>
    <string name="app_name" translatable="false">Super Trivia</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="blank_credentials">Type your credentials</string>
    <string name="config_game">Choose a difficulty and a category to start playing</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="select_category">Select Category</string>
    <string name="start_game">Start Game</string>
    <string name="answer">Answer</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="save">Save</string>
    <string name="selected_category">Category: %1$s</string>
    <string name="selected_difficulty">Difficulty: %1$s</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="show_score">Score: %1$d</string>
    <string name="next">Next</string>
    <string name="stop_playing">Finish Game</string>
    <string name="started_at">Started at %1$s</string>
    <string name="finished_at">Finished at %1$s</string>
    <string name="continue_string">Continue</string>
    <string name="date_pattern">yyyy-MM-dd HH:mm:ss</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="settings">Settings</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="logout" translatable="false">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_20" translatable="false">TOP 20</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password_not_match">Password and Confirm Password dont match</string>
    <string name="invalid_credentials">The credentials are invalid</string>
    <string name="connection_error">It was not possible to establish a connection. Try again later.</string>
    <string name="required_input">%1$s is required</string>
    <string name="email_taken">Email has already been taken</string>
    <string name="invalid_input">%1$s is invalid</string>
    <string name="too_short_input">%1$s must have at least %2$d characters</string>
</resources>