<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartGameFragment" >

    <TextView
        android:id="@+id/lbSelectedCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/category"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbSelectedDifficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/difficulty"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lbSelectedCategory"
        app:layout_constraintStart_toStartOf="@+id/lbSelectedCategory"
        app:layout_constraintTop_toBottomOf="@+id/lbSelectedCategory" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="@+id/lbSelectedDifficulty"
        app:layout_constraintStart_toStartOf="@+id/lbSelectedDifficulty"
        app:layout_constraintTop_toBottomOf="@+id/lbSelectedDifficulty" />
</androidx.constraintlayout.widget.ConstraintLayout>