<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AskToContinueFragment" >

    <TextView
        android:id="@+id/lbIsCorrect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/correct_answer" />

    <TextView
        android:id="@+id/lbScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/lbIsCorrect"
        app:layout_constraintStart_toStartOf="@+id/lbIsCorrect"
        app:layout_constraintTop_toBottomOf="@+id/lbIsCorrect"
        tools:text="Score: 10" />

    <Button
        android:id="@+id/btnNextProblem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/lbScore"
        app:layout_constraintStart_toStartOf="@+id/lbScore"
        app:layout_constraintTop_toBottomOf="@+id/lbScore" />

    <Button
        android:id="@+id/btnFinishGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/stop_playing"
        app:layout_constraintEnd_toEndOf="@+id/btnNextProblem"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnNextProblem"
        app:layout_constraintTop_toBottomOf="@+id/btnNextProblem" />
</androidx.constraintlayout.widget.ConstraintLayout>